# tentakel

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .travis.yml  CREDITS  CREDITS.md  ChangeLog  ChangeLog-OLD  INSTALL  INSTALL.md  MANIFEST.in  Makefile  README  README.md  TODO  TODO.md  noxfile.py  pylint.ini  pyproject.toml  setup.cfg  setup.py  tentakel.1  tentakel.1.html  tentakel.conf.example  tox.ini
doc/: plugins.md  tentakel.1.html
lekatnet/: shell.py  tpg.py
lekatnet/plugins/: __init__.py  rsh.py  ssh.py
py/: setup.py  tentakel
py/lekatnet/: config.py  error.py  remote.py  tpg.py
src/tentakel/: config.py  error.py  main.py  remote.py  shell.py  tpg.py
src/tentakel/plugins/: __init__.py  rsh.py  ssh.py
tentakel/: config.py  error.py  remote.py  shell.py  tpg.py
tentakel/plugins/: __init__.py  rsh.py  ssh.py
tests/: test_config.py  test_shell.py
