[tool.poetry]
name = "tentakel"
version = "3.1.3"
description = "distributed command execution"
license = "BSD"
homepage = "https://github.com/sfermigier/tentakel"
authors = [
  "Sebastian Stark, Marlon Berlin <cran@users.sourceforge.net, imaginat@users.sourceforge.net>",
  "Stefane Fermigier <sf@fermigier.com>",
]
readme = "README.md"

packages = [{ include = "tentakel", from = "src" }]


[tool.poetry.scripts]
tentakel = 'tentakel.main:main'


[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
coverage = "*"
mypy = "*"
typeguard = "*"
# pylint = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
