[tool.poetry]
name = "tentakel"
version = "4.0.0"
description = "distributed command execution"
license = "BSD"
homepage = "https://github.com/sfermigier/tentakel"
authors = [
  "Sebastian Stark, Marlon Berlin <cran@users.sourceforge.net, imaginat@users.sourceforge.net>",
  "Stefane Fermigier <sf@fermigier.com>",
]
readme = "README.md"

packages = [{ include = "tentakel", from = "src" }]


[tool.poetry.scripts]
tentakel = 'tentakel.main:main'


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
pytest = "*"

abilian-devtools = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = ["src/tentakel/tpg.py"]
